# jit-compiler

./: CMakeLists.txt
analysis/: analysis.cpp  analysis.h  optimization.cpp  optimization.h
ir/: analysis.cpp  analysis.h  basic_block.cpp  basic_block.h  call_graph.cpp  call_graph.h  common.cpp  common.h  graph.cpp  graph.h  id.h  instruction.cpp  instruction.h  ir_builder-inl.h  ir_builder.cpp  ir_builder.h  marker.h
samples/: factorial.txt
tests/: CMakeLists.txt  checks_elemination_tests.cpp  dom_tree_tests.cpp  graph_inlining_tests.cpp  ir_builder_tests.cpp  peephole_tests.cpp
utils/: debug.cpp  debug.h  intrusive_list.h  macros.h
